# Shinsei-Lineup

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
data/: overrides.yaml  statuses.yaml
script/: audit_canonical.py  build_frontend_data.py  check_build.py  check_coverage.py  check_data_integrity.py  claude_test.py  crawl_heroes.py  llm_core.py  llm_translate.py  migrate_to_canonical.py  models.py  override.py  paths.py  populate_bingxue_names.py
src/: App.vue  main.ts
src/components/: BingxueSection.vue  BriefDescription.vue  ChangelogDialog.vue  HeroCard.vue  HeroLibrary.vue  LineupSlot.vue  MobileSlotDetail.vue  RadarChart.vue  SkillDescription.vue  SkillLibrary.vue
src/components/dialogs/: ChangelogDialog.vue  MyProfilesDialog.vue
src/composables/: useActiveProfile.ts  useAuth.ts  useData.ts  useInventory.ts  useLineups.ts  useTemplateParser.ts  useTroopLevels.ts
src/constants/: changelog.ts  gameData.ts  traits.ts
src/lib/: auth.ts  initial-hash.ts  profiles.ts  share.ts  supabase.ts
src/router/: index.ts
src/views/: LineupBuilder.vue
